<resources>
    <string name="app_name">EZpills</string>
    <string name="settings">Settings</string>
    <string name="content_description_settings">Settings</string>
    <string name="about">EZpills is a great app for keeping track of your prescriptions and vitamins. To see our contact information, go to the Contact page.</string>
    <string name="content_description_about">About</string>
    <string name="hello_feedback_fragment">Feedback</string>
    <string name="hello_about_fragment">About</string>
    <string name="contact">Contact</string>
    <string name="content_description_contact">Contact</string>
    <string name="feedback">Feedback</string>
    <string name="content_description_feedback">Feedback</string>

    <string name="aboutItem">About</string>
    <string name="Vitamins">Vitamins</string>
    <string name="edit_selected_prescription_button">Edit prescription</string>
    <string name="delete_selected_prescription_button">Delete prescription</string>
    <string name="selected_prescription_time_of_notification_textview">Time of notification:</string>
    <string name="selected_precription_name_textview">Name:</string>
    <string name="selected_prescription_title">Prescription</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="select_type">Select type</string>
    <string name="add_name">Name</string>
    <string name="select_time">Select time</string>
    <string name="selected_vitamin_title">Vitamin</string>
    <string name="selected_vitamin_name_textview">Name:</string>
    <string name="selected_vitamin_time_of_notification_textview">Time of notification:</string>
    <string name="edit_selected_vitamin_button">Edit vitamin</string>
    <string name="delete_selected_vitamin_button">Delete vitamin</string>
    <string name="sign_in">Sign in</string>
    <string name="about_title">About</string>
    <string name="contact_email">Email:</string>
    <string name="contact_phone">Phone:</string>
    <string name="feedback_text">Here you can leave us a feedback on our application. This will be sent to our email address where one of our employees will review it.</string>
    <string name="feedback_submit">Submit</string>
    <string name="go_to_prescriptions">Go to prescriptions</string>
    <string name="go_to_vitamins">Go to vitamins</string>
    <string name="prescriptions">Prescriptions</string>
    <string name="sign_out">Sign out</string>
    <string name="time_format">Time format:</string>
    <string name="prescription">Prescription</string>
    <string name="vitamin">Vitamin</string>
    <string name="time_format_switch_12">12 hour</string>
    <string name="time_format_switch_24">24 hour</string>
    <string name="profile_email_text">Email:</string>
    <string name="profile_number_of_prescriptions">No. of prescriptions</string>
    <string name="profile_number_of_vitamins">No. of vitamins</string>
</resources>