<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/group">
    <item
        android:id="@+id/settings_menu_item"
        android:title="@string/settings"
        android:contentDescription="@string/content_description_settings"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/about_menu_item"
        android:title="@string/aboutItem"
        android:contentDescription="@string/content_description_about"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/contact_menu_item"
        android:title="@string/contact"
        android:contentDescription="@string/content_description_contact"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/feedback_menu_item"
        android:title="@string/feedback"
        android:contentDescription="@string/content_description_feedback"
        app:showAsAction="never"
        />
    </group>
</menu>