<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SelectedVitaminFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selected_vitamin_title"
            android:textSize="30dp"
            android:padding="20dp"
            android:textAlignment="center"
            android:gravity="center_horizontal" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selected_vitamin_name_textview"
                android:textSize="20dp"
                android:padding="20dp">

            </TextView>
            <TextView
                android:id="@+id/selected_vitamin_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp">

            </TextView>


        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"
            android:layout_margin="1dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selected_vitamin_time_of_notification_textview"
            android:textSize="20dp"
            android:padding="20dp">

        </TextView>
        <TextView
            android:id="@+id/selected_vitamin_time_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp">
        </TextView>
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"/>



            <Button
                android:id="@+id/editSelectedVitaminButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_selected_vitamin_button"
                android:layout_gravity="center"
                android:layout_marginTop="110dp">

            </Button>

            <Button
                android:id="@+id/deleteSelectedVitaminButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_selected_vitamin_button"
                android:layout_gravity="center">

            </Button>


    </LinearLayout>
</FrameLayout>