<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EditFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:paddingBottom="20dp"
            android:textSize="30dp"
            android:textAlignment="center"
            android:gravity="center_horizontal" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/edit_prescription_name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_name"
            android:paddingBottom="10dp"
            android:textSize="20dp">
        </TextView>
        <EditText
            android:id="@+id/edit_prescription_name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/edit_prescription_time_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_time"
            android:paddingBottom="10dp"
            android:textSize="20dp">
        </TextView>
        <TimePicker
            android:id="@+id/edit_prescription_time_timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            android:layout_gravity="center"
            android:paddingBottom="30dp">
        </TimePicker>
        <Button
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:layout_gravity="center">

        </Button>
    </LinearLayout>



</FrameLayout>